# notespice

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: auth (1).rs  auth.rs  handlers.rs  main.rs  search.rs  store.rs
static/: app.js  index.html  manifest.json  style.css  sw.js
