[package]
name = "notespice"
version = "1.3.7"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "notespice"
path = "src/main.rs"

# NOTE: these are the current, un-pinned crate versions as of writing.
# Build this with a normal up-to-date Rust toolchain (rustup, or a
# recent `rust:slim` Docker image) and `cargo build --release` resolves
# everything itself — nothing here is artificially held back.

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "signal"] }
tower-http = { version = "0.5", features = ["fs", "trace", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
password-hash = { version = "0.5", features = ["std"] }
rand = "0.8"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = 2
strip = true
